Update Jupiter Notebook for ML

--- a/python/Text_Classification.ipynb
+++ b/python/Text_Classification.ipynb
@@ -18,6 +18,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Prepare Model and Convert**"
+      ],
+      "metadata": {
+        "id": "aNIMCqLBBLTr"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -27,35 +36,34 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "\n",
-        "# Make numpy values easier to read.\n",
-        "np.set_printoptions(precision=3, suppress=True)\n",
-        "\n",
+        "from tensorflow.keras import layers\n",
+        "import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "import tensorflow as tf\n",
-        "from tensorflow.keras import layers"
+        "import re\n",
+        "import nltk\n",
+        "from collections import Counter\n",
+        "import re\n",
+        "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-        "import tensorflow as tf\n",
-        "import time\n",
-        "from wordcloud import WordCloud, STOPWORDS\n",
-        "from IPython.core.display import display, HTML\n",
-        "import plotly.graph_objects as go\n",
-        "import re\n",
+        "# import seaborn as sns\n",
+        "# import time\n",
+        "# from wordcloud import WordCloud, STOPWORDS\n",
+        "# from IPython.core.display import display, HTML\n",
+        "# import plotly.graph_objects as go\n",
         "# Natural Language Tool Kit\n",
-        "import nltk\n",
         "# nltk.download('stopwords')\n",
-        "from nltk.corpus import stopwords\n",
-        "from nltk.stem.porter import PorterStemmer\n",
-        "from collections import Counter\n",
-        "import cufflinks as cf\n",
-        "cf.go_offline()"
+        "# from nltk.corpus import stopwords\n",
+        "# from nltk.stem.porter import PorterStemmer\n",
+        "# import cufflinks as cf\n",
+        "# cf.go_offline()\n",
+        "## Make numpy values easier to read.\n",
+        "# np.set_printoptions(precision=3, suppress=True)"
       ],
       "metadata": {
         "id": "5FrjS8UIWlGZ"
@@ -517,10 +525,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Saved Model in .H5 Files#"
+        "### **Saved Model in .H5 Files**"
       ],
       "metadata": {
         "id": "boy1PUA8XsxR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This section will save model into .h5 files, so you can use this for converting to TFJS or TF Lite. Also with this format you can use directly in python without repeat compile a model."
+      ],
+      "metadata": {
+        "id": "mhgOnysDFspK"
       }
     },
     {
@@ -535,6 +552,54 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Used Saved Model For Classification**"
+      ],
+      "metadata": {
+        "id": "vmTMt_2LGWzh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Before use model the step by step that mist follow is like this :\n",
+        "\n",
+        "\n",
+        "---\n",
+        "1.   Preprocessing Data\n",
+        "2.   Load Model\n",
+        "3.   Tokenization and Padding\n",
+        "4.   Use Model to Predict Result\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "imOQ4YQFHyb8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Preprocessing Data and Prediction with Model**"
+      ],
+      "metadata": {
+        "id": "leanBR1HHpXw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Phase 1 : Preparing Model**\n",
+        "\n",
+        "You need add model machine learning .h5 from local to google colab first before do next step. After that you can check the model architecture with **this** code, if you have add model"
+      ],
+      "metadata": {
+        "id": "DZnbeRFl87VH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "new_model = tf.keras.models.load_model('/my_model.h5')\n",
@@ -545,6 +610,80 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Phase 2 : Preparing Vocab and Function Preprocessing**\n",
+        "\n",
+        "This phase you will prepare the vocabulary using trainning dataset because that is you use for the trainning in model before. But you also need to pre-processing the data first so make more accurate and don't have incosisten meaning"
+      ],
+      "metadata": {
+        "id": "Z9D85gS_9McI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prepare Based Vocab, Stopword, and Stemming\n",
+        "train_df = pd.read_csv(\"https://raw.githubusercontent.com/NgakanWidyasprana/title-campaign-classification/main/Dataset/Train.csv\")\n",
+        "id_stopword_dict = pd.read_csv('https://raw.githubusercontent.com/NgakanWidyasprana/title-campaign-classification/main/Dataset/stopwordbahasa.csv', header=None)\n",
+        "id_stopword_dict = id_stopword_dict.rename(columns={0: 'stopword'})\n",
+        "factory = StemmerFactory()\n",
+        "stemmer = factory.create_stemmer()\n",
+        "\n",
+        "# Function pre-processing\n",
+        "def remove_stopword(text):\n",
+        "    text = ' '.join(['' if word in id_stopword_dict.stopword.values else word for word in text.split(' ')])\n",
+        "    text = re.sub('  +', ' ', text) # Remove extra spaces\n",
+        "    text = text.strip()\n",
+        "    return text\n",
+        "\n",
+        "def clean_text(text):\n",
+        "    text = re.sub('[^a-zA-Z]', ' ', text)\n",
+        "    text = text.lower()\n",
+        "    # split to array (default delimiter is \" \")\n",
+        "    text = remove_stopword(text)\n",
+        "    return text\n",
+        "\n",
+        "def steaming(text):\n",
+        "  return stemmer.stem(text)\n",
+        "\n",
+        "# Preprocessing Data\n",
+        "train_df['Title Campaign'] = train_df['Title Campaign'].apply(lambda x : clean_text(x))\n",
+        "train_df['Title Campaign'] = train_df['Title Campaign'].apply(lambda x : steaming(x))\n",
+        "\n",
+        "# Make Vocabulary\n",
+        "# The maximum number of words to be used. (most frequent)\n",
+        "vocab_size = 285\n",
+        "embedding_dim = 32\n",
+        "# Max number of words in each complaint\n",
+        "max_length = 20\n",
+        "trunc_type = 'post'\n",
+        "padding_type = 'post'\n",
+        "# oov_took its set for words out our word index\n",
+        "oov_tok = \"<XXX>\"\n",
+        "\n",
+        "tokenizer = Tokenizer(num_words=vocab_size, oov_token=oov_tok)\n",
+        "tokenizer.fit_on_texts(training_sentences)\n",
+        "word_index = tokenizer.word_index"
+      ],
+      "metadata": {
+        "id": "zEeTXG4960vt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Phase 3 : Preparing Prediction for Model**\n",
+        "\n",
+        "This phase you will prepare the prediction for title that you want to predict with the model. Before to use it, you must pre-processing the input first and predict in the last"
+      ],
+      "metadata": {
+        "id": "kHwfF7xK_7xv"
+      }
     },
     {
       "cell_type": "code",
